# project-scaffolding

./: .gitignore  README.md  cookiecutter.json
tests/: test_creation.py
{{ cookiecutter.repo_name }}/: .env  .gitignore  Makefile  README.md  common.env  docker-compose.yml  pyproject.toml
{{ cookiecutter.repo_name }}/.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  entrypoint.sh  requirements.txt
{{ cookiecutter.repo_name }}/docker-images-build/core/: Dockerfile
{{ cookiecutter.repo_name }}/src/{{ cookiecutter.package_name }}/: setup.py
{{ cookiecutter.repo_name }}/{{ cookiecutter.package_name }}/core/: logger.py  settings.py
